apps/le4db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: le4db-service
  labels:
    app: le4db-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: le4db
  type: ClusterIP
